<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EasyTravel</string>
    <string name="action_settings">Settings</string>
    <string name="car">Settings</string>
    <string name="inBrowser">InBrowser</string>
    <string name="goBack">backr</string>
    <string name="goForward">forward</string>
    <string name="goHome">home</string>
    <string name="uberB">UberButtom</string>
    <string name="cars">CarsAvaliables</string>
    <string name="ButtomFollowing">Following</string>
    <string name="ButtomPrevious">Previous</string>
    <string name="flight">Settings</string>
    <string name="app_intro">AppIntro</string>
    <string name="rattings">Settings</string>
    <string name="apartment">Settings</string>
    <string name="fondo">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_list_cars">ListCars</string>
    <string name="search">search</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_uber">UberActivity</string>
    <string name="google_Maps_API_key">AIzaSyCP5ChkRRkpDbfevOpBcKSpPQufr9h2wGc</string>
    <string name="select_location">select location:\n</string>
    <string name="flights">Flights</string>
    <string name="tickets">Tickets</string>
    <string name="about">About...</string>
    <string name="simulator">Simulator</string>
    <string name="nav_header">Airport App v.1.0</string>
    <string name="airport_app_author">Arthur V. Ratz @ CodeProject.Com </string>
    <string name="arrivals_tab">Arrivals</string>
    <string name="departures_tab">Departures</string>
    <string name="flights_prev">YESTERDAY</string>
    <string name="flights_now">TODAY</string>
    <string name="flights_next">TOMORROW</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_search_businesses">Search Businesses</string>
    <string name="button_all_categories">All Categories</string>
    <string name="button_event">Event lookup</string>
    <string name="button_search_">Search Businesses</string>
    <string name="business_endpoint">Business search!</string>
    <string name="category_endpoint">Category Endpoint</string>
    <string name="event_endpoint">Event Endpoint</string>
    <string name="button_exit">Exit</string>
    <string name="text_term">Term: </string>
    <string name="text_location">Location: </string>
    <string name="text_price">Price: </string>
    <string name="map_notification">Please make sure Google Services is beyond v13.4!</string>
    <string name="search_hint">Click button to search.</string>
    <string name="business_name">Name: </string>
    <string name="business_rating">Rating: </string>
    <string name="business_price">Price: </string>
    <string name="business_review_count">Review count: </string>
    <string name="business_location">Location: </string>
    <string name="business_phone">Phone: </string>
    <string name="yelp_key">MRFYWpOLGwR-kiDILtqbDiXnRHZ-NVUlTArt0Ul0UQQsRvZqXx0oNRojs1xa96JN7QI5rJtmeDemfk9dTfHjqx2-vutsQRGbpKrb1QwpB6WO6EiItKYRQ5un7YwOXXYx</string>
    <string-array name="terms">
        <item>Restaurants</item>
        <item>Museums</item>
        <item>Parks</item>
        <item>Bars</item>
        <item>Clubs</item>
        <item>Gyms</item>
        <item>Hair Salons</item>
        <item>Massage</item>
        <item>Dry cleaning</item>
        <item>Hospitals</item>
    </string-array>
    <string-array name="locations">
        <item>Linz</item>
        <item>Vienna</item>
        <item>Graz</item>
        <item>Innsbruck</item>
        <item>Lienz</item>
        <item>Salzburg</item>
        <item>Klagenfurt</item>
    </string-array>
    <string-array name="prices">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>
    <string name="icon">icon</string>
    <string name="budgetsTitle">Budgets</string>
    <string name="addBudgetTitle">Add Budget</string>
    <string name="viewBudgetTitle">View Budget</string>
    <string name="editBudgetTitle">Edit Budget</string>
    <string name="budgetDescription">Create and manage budgets</string>
    <string name="transactionsTitle">Transactions</string>
    <string name="transactionsDescription">Enter transactions and revenues</string>
    <string name="addExpenseTransactionTitle">Add Expense</string>
    <string name="editExpenseTransactionTitle">Edit Expense</string>
    <string name="viewExpenseTransactionTitle">View Expense</string>
    <string name="addRevenueTransactionTitle">Add Revenue</string>
    <string name="editRevenueTransactionTitle">Edit Revenue</string>
    <string name="viewRevenueTransactionTitle">View Revenue</string>
    <string name="importExportTitle">Import/Export</string>
    <string name="totalBudgetTitle">Total</string>
    <string name="addShortcutsTitle">Add Budget Manager Shortcut</string>
    <string name="addExpenseTransactionShortcutTitle">Add Expense Shortcut</string>
    <string name="addRevenueTransactionShortcutTitle">Add Revenue Shortcut</string>
    <string name="add">Add</string>
    <string name="selectDates">Select Dates</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string name="account">Account</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="receipt">Receipt</string>
    <string name="capture">Capture</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="clean">Clean</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="confirm">Confirm</string>
    <string name="Grocery">Grocery</string>
    <string name="one_hundred">100</string>
    <string name="fraction">%1$d/%2$d</string>
    <string name="budgetTypeMissing">Budget type is empty</string>
    <string name="budgetValueMissing">Budget value is empty</string>
    <string name="budgetMissing">No budget selected</string>
    <string name="valueMissing">Value is empty</string>
    <string name="valueInvalid">Value invalid</string>
    <string name="dateInvalid">Date invalid</string>
    <string name="expensesTitle">Expenses</string>
    <string name="revenuesTitle">Revenues</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dateRangeFormat">%1$s ~ %2$s</string>
    <string name="noBudgets">You don\'t have any budgets at the moment. Click the "+" (plus) button up top to get started.\n\nBudget Watch lets you create budgets, then track spending during the month.</string>
    <string name="noExpenses">You don\'t have any expense transactions at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="noExpensesForBudget">You don\'t have any expense transactions for budget \"%1$s\"</string>
    <string name="noRevenues">You don\'t have any revenue transactions at the moment. Click the "+" (plus) button up top to get started.</string>
    <string name="noRevenuesForBudget">You don\'t have any revenue transactions for budget \"%1$s\"</string>
    <string name="budgetDateRangeHelp">Select date range to display for budgets</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="startDateAfterEndDate">Start date must be on or before end date</string>
    <string name="cleanupHelp">Select date; all receipts on or before the date will be deleted</string>
    <string name="importExport">Import/Export</string>
    <string name="exportName">Export</string>
    <string name="dateRangeField">Date Range:</string>
    <string name="allDates">All Dates</string>
    <string name="changeDateRange">Change date range</string>
    <string name="exportDateRangeHelp">Select date range of transactions to export</string>
    <string name="importedFrom">Imported from: %1$s</string>
    <string name="fileFormat">File format</string>
    <string name="exportedTo">Exported to: %1$s</string>
    <string name="importFailed">Failed to import: %1$s</string>
    <string name="exportFailed">Failed to export: %1$s</string>
    <string name="importing">Importing&#8230;</string>
    <string name="exporting">Exporting&#8230;</string>
    <string name="purgeOldReceipts">Purge Old Receipts</string>
    <string name="cleaning">Cleaning&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="pictureCaptureError">Unable to capture image with camera</string>
    <string name="noCameraPermissionError">Unable to capture receipt without the camera permission</string>
    <string name="iconDescription">BudgetManager icon</string>
    <string name="addExpenseDescription">Add an expense transaction</string>
    <string name="settings">Settings</string>
    <string name="receiptQuality">Receipt Quality</string>
    <string name="receiptQualitySummary">Select the JPEG quality used when capturing receipt images</string>
    <string name="encodingReceipt">Encoding receipt</string>
    <string name="deleteBudgetTitle">Remove Budget</string>
    <string name="deleteBudgetConfirmation">Please confirm that you want to delete this budget. All transactions associated with this budget will remain.</string>
    <string name="deleteTransactionTitle">Remove Transaction</string>
    <string name="deleteTransactionConfirmation">Please confirm that you want to delete this transaction.</string>
    <string name="csv" translatable="false">CSV</string>
    <string name="json" translatable="false">JSON</string>
    <string name="zip" translatable="false">Zip</string>
    <string name="importExportHelp">Backed up data can allow you to move your budgets and transactions to another device.</string>
    <string name="importSuccessfulTitle">Import successful</string>
    <string name="importFailedTitle">Import failed</string>
    <string name="exportSuccessfulTitle">Export successful</string>
    <string name="exportFailedTitle">Export failed</string>
    <string name="noExternalStoragePermissionError">Unable to import or export cards without the external storage permission</string>
    <string name="exportOptionExplanation">Data is written to the top directory in external storage.</string>
    <string name="importOptionFilesystemTitle">Import from filesystem</string>
    <string name="importOptionFilesystemExplanation">Choose a specific file from the filesystem.</string>
    <string name="importOptionFilesystemButton">From filesystem</string>
    <string name="importOptionApplicationTitle">Import from filesystem</string>
    <string name="importOptionApplicationExplanation">Use an external application like Dropbox, Google Drive, or your favorite file manager to open a file.</string>
    <string name="importOptionApplicationButton">Use external application</string>
    <string name="importOptionFixedTitle">Import from export location</string>
    <string name="importOptionFixedExplanation">Import from the same location on the filesystem that is written to on export.</string>
    <string name="importOptionFixedButton">Use export location</string>
    <string name="sendLabel">Send&#8230;</string>
    <string name="searchHint">Search&#8230;</string>
    <string name="searchEmptyExpenses">No matching expense transactions.</string>
    <string name="searchEmptyRevenues">No matching revenue transactions.</string>
    <string name="addExpenseDisabled">Adding an expense is disabled</string>
    <string name="addRevenueDisabled">Adding a revenue is disabled</string>
    <string name="startIntro">Start Intro</string>
    <string name="intro1Title">Welcome to EasyTravel!\n</string>
</resources>