<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">    <group android:checkableBehavior="single">
        <item

            android:id="@+id/flights"

            android:icon="@drawable/ic_flight_black_24dp"

            android:title="@string/flights"
            android:visible="false" />
        <item

            android:id="@+id/about"

            android:icon="@drawable/ic_star_black_24dp"

            android:title="@string/about"
            android:visible="false" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings"
            android:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_intro"
            android:showAsAction="never"
            android:title="@string/startIntro"
            android:visible="false" />
        <item
            android:id="@+id/action_about"
            android:title="@string/about"
            android:showAsAction="never"/>
    </group>
</menu>