<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_business_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_name"
        android:layout_margin="10dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/business_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_rating"
        android:layout_margin="10dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/business_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_price"
        android:layout_margin="10dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/business_review_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_review_count"
        android:layout_margin="10dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/business_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_location"
        android:layout_margin="10dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/business_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_phone"
        android:layout_margin="10dp"
        android:textColor="#000000"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/review_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>
</LinearLayout>