<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_back"
        android:contentDescription="@string/goBack"
        android:icon="@drawable/ic_action_back"
        android:title="@string/goBack"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/item_forward"
        android:contentDescription="@string/goForward"
        android:icon="@drawable/ic_action_forward"
        android:title="@string/goForward"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/item_home"
        android:contentDescription="@string/goHome"
        android:icon="@drawable/ic_action_home"
        android:title="@string/goHome"
        app:showAsAction="always"></item>


</menu>